--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
@@ -1796,7 +1796,7 @@ who does not, for a long time, make his face the mark for
 कियदिति ॥ हे गौरि, कियत्किंप्रमाणकम् । किमवधिकमित्यर्थः । चिरं श्राम्यसि तपस्यसि । अत्यन्तसंयोगे द्वितीया । ममापि पूर्वाश्रमः प्रथमाश्रमो ब्रह्मचर्याश्रमस्तत्र संचितं संचितं संपादितं तपो विद्यते अर्धश्चासौ भागश्च तेन तस्य तपसोऽर्धभागेनैकदैशेन काङ्क्षितमिष्टं वरमुपयन्तारं लभस्व । तं वरं साधु सम्यग्वेदितु ज्ञातुमिच्छामि । यद्यसौ योग्यो भवति तदा संमतिरिति भावः ॥ 5.50 ॥
 </details>
 
-### इष्ट-वरः
+### इष्ट-वरः, गौर्य्-अवस्था च
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इति प्रविश्याभिहिता द्विजन्मना  
@@ -1866,6 +1866,12 @@ who does not, for a long time, make his face the mark for
 पिनाक-पाणिं पतिम् **आप्तुम् इच्छति** ॥ 5.53 ॥  
 </details>
 
+<details><summary>English</summary>
+
+(53.) This lady, disdaining all the lords of the four quarters, Mahendra and others, of exalted dignity, seeks a husband in the Trident-holder, who is not to be conquered by charms, as is evinced by his destruction of the mind-born. 
+</details>
+
+
 <details><summary>मूलम्</summary>
 
 इयं महेन्द्रप्रभृतीनधिश्रिय- 
@@ -1893,13 +1899,36 @@ who does not, for a long time, make his face the mark for
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-असह्यहुंकारनिवर्तितः पुरा पुरारिमप्राप्तमुखः शिलीमुखः ।  
-इमां हृदि व्यायतपातमक्षिणोद्विशीर्णमूर्तेरपि पुष्पधन्वनः ॥ 5.54 ॥  
+अ-सह्य-हुंकार-**निवर्तितः** पुरा  
+पुरारिम् अ-प्राप्त-मुखः शिली-मुखः+++(=बाणः)+++ ।  
+इमां हृदि **व्यायत-पातम् अक्षिणोद्**+++(←क्षिणु हिंसायाम्)+++  
+विशीर्ण-मूर्तेर् अपि पुष्पधन्वनः ॥ 5.54 ॥   
++++(दुर्बलेषु के नाम न प्रगल्भन्ते!)+++
 </details>
+
+<details><summary>English</summary>
+
+(54.) The arrow of the Flower-bowed god, whose point failed to reach the enemy of the p'uras, being first hurled back with the Hunkára sound, difficult to be borne, struck her in the heart with a cruel blow, although his body had been destroyed. 
+</details>
+
+<details><summary>अरुणगिरिनाथः</summary>
+
+कथं प्रतिकूलेऽपि प्रेमेत्याशङ्क्य तदेव हि प्रेमकारणमित्याह- 
+असह्येति । व्यायतपातं दीर्घतरपातम् । अक्षिणोदबाधत । दुर्बले हि सर्वः प्रगल्भत इति भावः । । ५४ ।। 
+
+</details>
+
+<details><summary>नारायणः</summary>
+
+अथ वक्ष्यमाणानां मदनवेदनानामतिमहतीनां दग्धे मदनेऽप्युपपत्तिं दर्शयति — असह्येति । विशीर्णमूर्तेः अपि पुष्पधन्वनः शिलीमुखः पुरा असह्यहुङ्कारनिवर्तितः पुरारिम् अप्राप्तमुखः इमां हृदि व्यायतपातम् अक्षिणोत् । विशीर्णा दग्धा मूर्तिः शरीरं यस्य तस्यापि । अपिशब्दः शिलीमुखप्रवृत्तावनुपपत्तिं वक्ति । पुष्पधन्वनः पुष्पमेव धनुः यस्य तस्य कामदेवस्य । शिलीमुखः शरः । 'अलिबाणौ शिलीमुखावित्यमरः । पुरा कामदहनावस्थायाम् । असह्येन सोढुमशक्येन हुङ्कारेण कोपोद्रेकजनितेन शब्दविशेषेण करणभूतेन निवर्तितः व्यावर्तितः । पुरारिणेति शेषः । अत एव पुरारिम् अप्राप्तमुखः, पुराणामरिः पुरारिः । अनेन हरस्यानभिभवनीयत्वमुक्तम् । अप्राप्तं मुखमग्रं यस्य तथाभूतः सन् । इमां स्त्रीत्वेन बाल्यावस्थया च दुर्बलां पार्वतीम् । हृदि हृदये । अनेन मर्मस्थलपात उक्तः । येन च वेदनाधिक्यं ध्वन्यते । व्यायतपातमिति क्रियाविशेषणम् । व्यायतः विशेषेण आयतः दीर्घः चिरकालावस्थायी पातः पतनं यथा भवति तथा अक्षिणोत् । ' क्षिणु हिंसायामिति धातुः । अत्यन्तमबाधतेत्यर्थः । शरमोक्षानन्तरं हरकोपकृशानुना मदने दग्धे हरमेव लक्षीकृत्य सरभसमभिपतन् मदनवाणो भगवता हुङ्कारमात्रेण निवर्तितः सन् भगवत्परिचर्यार्थं तत्पार्श्ववर्तिनीं दुर्बलामनाथामिमामबाधत ।  
+
+दुर्बलेषु के नाम न प्रगल्भन्त इति भावः ॥ ५४ ॥+++(5)+++ 
+[[३०२]]
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-'दृङ्मनःसङ्गसंकल्पो जागरः कृशतारतिः । ह्रीत्यागोन्मादमूर्च्छान्ता इत्यनङ्गदशा दश ॥' इति । तत्रास्याः काश्चिद्दशाः क्रममनादृत्यैव योजयति 'इयम्' इत्यादिभिः षङ्भिः श्लोकैः-  
 असह्यहुंकारनिवर्तितः पुरा पुरारिमप्राप्तमुखः शिलीमुखः ।  
 इमां हृदि व्यायतपातमक्षिणोद्विशीर्णमूर्तेरपि पुष्पधन्वनः ॥ 5.54 ॥  
 </details>
@@ -1911,19 +1940,31 @@ who does not, for a long time, make his face the mark for
 
 <details><summary>मल्लिनाथः</summary>
 
-असह्येति । पुरा पूर्वमसह्येन सोढुमशक्येन हुङ्कारेण रौद्रेण निवर्तितः । अतएव पुरारिं हरमप्राप्तमुखोऽप्राप्तफलो विशीर्णमूर्तेर्नष्टशरीरस्यापि पुष्पधन्वनः कामस्य शलीमुखो बाण इमां पार्वतीं हृदि व्यायतः । सुदूरावगाढ इति यावत् । तादृक्पातः प्रहारो यस्मिन्कर्मणि तत्तथाक्षिणोदकर्शत् । दग्धदेहस्यापि मार्गणो लग्नः । 'मृदुः सर्वत्र बाध्यते' इति भावः । अनेन 'विवृण्वसी शैलसुतापि भावम्' (3/68) इत्यत्रोक्तं चक्षु प्रीतिमनः- सङ्गाख्यमवस्थाद्वयमनन्तरावस्थोपयोगितयानूद्य कार्श्यवस्था सूचिता ॥ 5.54 ॥
+असह्येति । पुरा पूर्वमसह्येन सोढुमशक्येन हुङ्कारेण रौद्रेण निवर्तितः । अतएव पुरारिं हरमप्राप्तमुखोऽप्राप्तफलो विशीर्णमूर्तेर्नष्टशरीरस्यापि पुष्पधन्वनः कामस्य शलीमुखो बाण इमां पार्वतीं हृदि  
+व्यायतः - सुदूरावगाढ इति यावत् -  
+तादृक्पातः प्रहारो यस्मिन्कर्मणि तत्तथाक्षिणोद् अकर्शत् । दग्धदेहस्यापि मार्गणो लग्नः । 'मृदुः सर्वत्र बाध्यते' इति भावः । अनेन 'विवृण्वसी शैलसुतापि भावम्' (3/68) इत्यत्रोक्तं चक्षु प्रीतिमनः- सङ्गाख्यमवस्थाद्वयमनन्तरावस्थोपयोगितयानूद्य कार्श्यवस्था सूचिता ॥ 5.54 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तदा प्रभृत्यन्मदना पितुर्गृहे ललाटिकाचन्दनधूसरालका ।  
-न जातु वाला लभते स्म निर्वृतिं तुषारसंघातशिलातलेष्वपि ॥ 5.55 ॥  
+तदा प्रभृत्य् उन्मदना पितुर् गृहे  
+ललाटिका-चन्दन-धूसरालका ।  
+**न** जातु बाला **लभते** स्म निर्वृतिं  
+तुषार-संघात-शिला-तलेष्व् अपि ॥ 5.55 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(55.) From that time forth, powerfully affected by love, and with her curling tresses whitened by the sandal paste on her forehead, the maiden never felt ease even when reclining on the surfaces, of snow-slabs while in her father's 
+house. 
+
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-तदा प्रभृत्यन्मदना पितुर्गृहे ललाटिकाचन्दनधूसरालका ।  
-न जातु वाला लभते स्म निर्वृतिं तुषारसंघातशिलातलेष्वपि ॥ 5.55 ॥  
+तदा प्रभृत्युन्मदना पितुर्गृहे ललाटिकाचन्दनधूसरालका ।  
+न जातु बाला लभते स्म निर्वृतिं तुषारसंघातशिलातलेष्वपि ॥ 5.55 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -1938,9 +1979,16 @@ who does not, for a long time, make his face the mark for
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-उपात्तवर्णे चरिते पिनाकिनः सबाष्पकण्ठस्खलितैः पदैरियम् ।  
-अनेकशः किंनरराजकन्यका वनान्तसंगीतसखीररोदयत् ॥ 5.56 ॥  
+उपात्त-वर्णे+++(→ त्रिपुरजयादौ)+++ चरिते पिनाकिनः  
+स-बाष्प-कण्ठ-स्खलितैः पदैर् इयम् ।  
+अनेकशः किंनर-राज-कन्यका  वनान्त-संगीत-सखीर् **अरोदयत्** ॥ 5.56 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(56.) Many a time did she make the daughters of the Kinnara kings, her companions in the songs sung in the woods, burst into tears, by her words ( of grief) scarcely articulate in the throat choking with tears, while the exploits of the Pináka-holder were being sung. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -1955,14 +2003,23 @@ who does not, for a long time, make his face the mark for
 
 <details><summary>मल्लिनाथः</summary>
 
-उपातेति । पिनाकिनः शंभोश्चरिते त्रिपुरविजयादिचेष्टित उपातवर्णेप्रारब्धगोतक्रमे । 'गीतक्रमेस्तुतौ वेदे वर्णशब्दः प्रयुज्यते' । इति हलायुधः । सबाष्पे गद्गदे कण्ठे स्खलितैर्विशीर्णैः पदैः सुप्तिङन्तरुपैः करणैः वनान्ते संगीतेन निमितेन सखीर्वयस्याः । किन्न्रराजकन्यका अनेकशो बहुशोऽरोदयदश्रुमोक्षमकारयत् । हरचरितगानजनितमदनवेदनामेनां वीक्ष्यकिंनर्योऽपि रुरुदुरिति भावः । अत्र वर्णस्खलनलक्षणकार्योक्त्या पुनः पुनस्तत्कारणीभूतमूर्च्छावस्थाप्रादुर्भावो व्यज्यतेऽन्यथा सखीरोदनानुपपतेरिति । द्वादशावस्थापक्षे तु प्रलापावस्था च व्यज्यते । 'प्रलापो गुणकीर्तनम्' इत्यालंकारिकाः ॥ 5.56 ॥
+उपात्तेति । पिनाकिनः शंभोश्चरिते त्रिपुरविजयादिचेष्टित उपातवर्णे प्रारब्धगोतक्रमे । 'गीतक्रमेस्तुतौ वेदे वर्णशब्दः प्रयुज्यते' । इति हलायुधः । सबाष्पे गद्गदे कण्ठे स्खलितैर्विशीर्णैः पदैः सुप्तिङन्तरुपैः करणैः वनान्ते संगीतेन निमितेन सखीर्वयस्याः । किन्न्रराजकन्यका अनेकशो बहुशोऽरोदयदश्रुमोक्षमकारयत् । हरचरितगानजनितमदनवेदनामेनां वीक्ष्यकिंनर्योऽपि रुरुदुरिति भावः । अत्र वर्णस्खलनलक्षणकार्योक्त्या पुनः पुनस्तत्कारणीभूतमूर्च्छावस्थाप्रादुर्भावो व्यज्यतेऽन्यथा सखीरोदनानुपपतेरिति । द्वादशावस्थापक्षे तु प्रलापावस्था च व्यज्यते । 'प्रलापो गुणकीर्तनम्' इत्यालंकारिकाः ॥ 5.56 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-त्रिभागशेषसु निशासु च क्षणं निमील्य नेत्रे सहसा व्यबुध्यत ।  
-क्व नीलकण्ठ ! व्रजसीत्यलक्ष्यवागसत्यकण्ठार्पितबाहुबन्धना ॥ 5.57 ॥  
+त्रिभागशेषसु निशासु च क्षणं  
+**निमील्य** नेत्रे सहसा **व्यबुध्यत** ।  
+क्व नीलकण्ठ ! **व्रजसीत्य्** अ-लक्ष्य-वाग्  
+अ-सत्य-कण्ठार्पित-बाहु-बन्धना ॥ 5.57 ॥+++(5)+++  
 </details>
+
+<details><summary>English</summary>
+
+(57.) At night, when the third part was still remaining, she could scarcely close her eyes for a moment, when all of a sudden she would start up with incoherent cries of—"O Thou of azure neck, where dost thou go?" and would throw her arms tight round an imaginary neck. 
+
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -1980,16 +2037,32 @@ who does not, for a long time, make his face the mark for
 त्रिभागेति । किंचेति चार्थः । शिष्यत इति शेषः । कर्मणि घञ् । निभ्यो भागेभ्यः शेषास्वशिष्टासु । यद्वा रात्रेस्त्रियामत्वेन प्रसिद्धत्वात्तृतीयो भागास्त्रिभागः । संख्याशब्दस्य वृत्तिविषये पूरणार्थत्वमिष्यते । यथा 'शतांशः' 'सहस्रांशः' इति । त्रिभागः शेषो यासां तासु निशासु क्षणं क्षणमात्रं नेत्रे निमील्य मीलचित्वा सहसा सद्यः । हे नीलकण्ठ ! क्व व्हजसि कुव गच्छसीत्यलक्ष्या निर्विषया वाग्वयवनं यस्याः सा यथोक्ता तथोक्ता तथासत्ये मिथ्याभूते कण्ठेऽर्पितं बाहुबन्धनं यस्याः सा यथोक्ता तथासत्ये मिथ्याभूते कण्ठेऽर्पितं बाहुबन्धनं यस्याः सा तथा सती व्यबुध्यत विबुद्धवती । एतेन जागरोन्मादौ सूचितौ ॥ 5.57 ॥
 </details>
 
+<details><summary>विस्तारः (द्रष्टुं नोद्यम्) - प्रस्तावः</summary>
+
+स्वप्नसादृश्य-प्रतिकृति-दर्शन--  
+तद्-अङ्ग-स्पृष्ट-स्पर्शाख्याश्  
+चत्वारो विरहिणां विनोदाः ।  
+तत्र स्वप्न-संदर्शनम् उक्त्वा प्रतिकृति-दर्शनम् आह-  
+</details>
+
+
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स्वप्नसादृश्यप्रतिकृतिदर्शनतदङ्गस्पृष्टस्पर्शाख्याश्चत्वारो विरहिणां विनोदाः । तत्र स्वप्नसंदर्शनमुक्त्वा प्रतिकृतिदर्शनमाह-  
-यदा बुधैः सर्वगतस्त्वमुच्यसे न वेत्सि भावस्थमिमं कथं जनम् ।  
-इति स्वहस्तोल्लिखितश्च मुग्धया रहस्युपालभ्यत चन्द्रशेखरः ॥ 5.58 ॥  
+यदा बुधैः सर्व-गतस् त्वम् उच्यसे  
+**न वेत्सि** भाव-स्थम् इमं कथं जनम् ।  
+इति स्व-हस्तोल्लिखितश् च मुग्धया  
+रहस्य् **उपालभ्यत** चन्द्रशेखरः ॥ 5.58 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(58.) 
+And He of the cresent-crest, drawn with her own hands by this silly girl, was upbraided in private with the words: Thou hast been considered all-pervading by the wise; how, then, dost thou not know this person, slave to thy love? 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-स्वप्नसादृश्यप्रतिकृतिदर्शनतदङ्गस्पृष्टस्पर्शाख्याश्चत्वारो विरहिणां विनोदाः । तत्र स्वप्नसंदर्शनमुक्त्वा प्रतिकृतिदर्शनमाह-  
 यदा बुधैः सर्वगतस्त्वमुच्यसे न वेत्सि भावस्थमिमं कथं जनम् ।  
 इति स्वहस्तोल्लिखितश्च मुग्धया रहस्युपालभ्यत चन्द्रशेखरः ॥ 5.58 ॥  
 </details>
@@ -2006,14 +2079,25 @@ who does not, for a long time, make his face the mark for
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-यदा च तस्याधिगमे जगत्पतेरपश्यदन्यं न विधिं विचिन्वती ।  
-तदा सहास्माभिरनिज्ञया गुरोरियं प्रपन्ना तपसे तपोवनम् ॥ 5.59 ॥  
+यदा च तस्याधिगमे जगत्-पतेर्  
+**अपश्यद्** अन्यं **न**, विधिं **विचिन्वती** ।  
+तदा सहास्माभिर् अनुज्ञया गुरोर्  
+इयं **प्रपन्ना** तपसे तपोवनम् ॥ 5.59 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(59.) When at last she could find no other way to win the Lord of the universe though deliberately searching, she 
+( 35 ) 
+came with us to this sacred forest for practising austerities permitted by her father. 
+
+</details>
+
 
 <details><summary>मूलम्</summary>
 
 यदा च तस्याधिगमे जगत्पतेरपश्यदन्यं न विधिं विचिन्वती ।  
-तदा सहास्माभिरनिज्ञया गुरोरियं प्रपन्ना तपसे तपोवनम् ॥ 5.59 ॥  
+तदा सहास्माभिरनुज्ञया गुरोरियं प्रपन्ना तपसे तपोवनम् ॥ 5.59 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -2028,9 +2112,18 @@ who does not, for a long time, make his face the mark for
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-द्रुमेषु सख्या कृतजन्मसु स्वयं फलं तपः साक्षिषु दृष्टमेष्वपि ।  
-न च प्ररोहाभिमुखोऽपि दृश्यते मनोरथोऽस्याः शशिमौलिसंश्रयः ॥ 5.60 ॥  
+द्रुमेषु सख्या कृत-जन्मसु स्वयं  
+फलं तपः-साक्षिषु **दृष्टम्** एष्व् अपि ।  
+**न** च प्ररोहाभिमुखोऽपि **दृश्यते** मनोरथोऽस्याः शशिमौलि-संश्रयः ॥ 5.60 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(60.) 
+This our friend has seen fruit appearing on these trees (planted) (lit. given birth to) by herself and the witnesses of her austerities: and yet the craving of her heart, which has for its basis the moon-crested God, does not seem even to be near sprouting time (about to bear fruit). 
+
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -2040,7 +2133,7 @@ who does not, for a long time, make his face the mark for
 
 <details><summary>अन्वयः</summary>
 
-सख्या स्वयं कृतजन्मसु पतःसाक्षिषु एषु द्रुमेषु अपि फलं दृष्टम् । (परम्) अस्याः शशिमौलिसंश्रयो मनोरथश्च प्ररोहाऽभिमुशोऽपि न दृश्यते ।  
+सख्या स्वयं कृतजन्मसु तपःसाक्षिषु एषु द्रुमेषु अपि फलं दृष्टम् । (परम्) अस्याः शशिमौलिसंश्रयो मनोरथश्च प्ररोहाऽभिमुशोऽपि न दृश्यते ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
@@ -2050,14 +2143,44 @@ who does not, for a long time, make his face the mark for
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-न वेद्मि स प्रार्थितदुर्लभः कदा सखीभि रस्त्रीत्तरमीक्षितामिमाम् ।  
-तपःकृशामभ्युपपत्स्यते सखी वृषेव सीतां तदवग्रहक्षताम् ॥ 5.61 ॥  
+**न वेद्मि** स प्रार्थित-दुर्लभः कदा  
+सखीभिर् अस्रान्तरम्+++(=बाष्पान्तरम्)+++ **ईक्षिताम्** इमाम् ।  
+तपः-कृशाम् **अभ्युपपत्स्यते** सखीं  
+वृषेव+++(=इन्द्र इव)+++ सीतां+++(=लाङ्गल-पद्धतिम्)+++ तद्-अवग्रह-क्षताम् ॥ 5.61 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(61.) 
+I do not know when he, difficult to be secured though sought after, will favour this our friend, worn by penance and looked at by us, her friends, with tears, as Indra favours (with showers) the earth, distressed by his holding off (the rain). 
+
+</details>
+
+<details><summary>अरुणगिरिनाथः</summary>
+
+एषा च चिन्तास्माकमेव, न त्वस्याः । एषा त्वतिधैर्यादद्यापि विषादादिभिर्न स्पृश्यते । आरम्भतुल्यावस्थैव भवतीत्यभिप्रायेण स्वावस्थां दर्शयति- 
+नेति । 
+
+प्रार्थितो दुर्लभश्चेति प्रार्थितदुर्लभः । प्रार्थनायां दुर्लभ इति [[३०९]] सासूयकथनम् ।  
+अत्रान्तरे अस्रस्य परिपतनोद्गमयोर् अन्तराल इत्यर्थः । अनेनास्रस्य निर्विच्छेदत्वं द्योत्यते । अभ्यवपत्स्यते अनुग्रहीष्यति । वृषा इन्द्रः । सीतां हलक्षतां भूमिम् । 'सीता लाङ्गलपद्धतिरिति हलायुधः । तच्छब्देन वृषा परामृश्यते । इन्द्रवर्षविघातशोषितामित्यर्थः ॥ ६१ ॥ 
+</details>
+
+<details><summary>नारायणः</summary>
+
+सखीनामस्माकमेवैषा चिन्ता । इयं पुनरतिधैर्यादद्यापि विषादैर्नाभिभूयते इत्यभिप्रायेणातिदीनां निजावस्थामाह- 
+नेति । प्रार्थितदुर्लभः सः कदा तपः कृशां सखीभिः अत्रान्तरवीक्षिताम्' इमां सखीम् अभ्यवपत्स्यते, न वेद्मि । प्रार्थितदुर्लभः प्रार्थितश्चासौ दुर्लभश्चेति प्रार्थितदुर्लभः । सर्वप्रार्थनीययास्मत्प्रियवयस्यया प्रकर्षेण अर्थितोऽपि दुर्लभ इति सासूयं वचनमिदम्। सः हरः । ' भविष्यति प्रार्थितदुर्लभ कथम् (कु. ५.४६) इत्यादिवचनस्योत्तरमेतत् । कदा कस्मिन् काले । अनुग्रहकालस्त्विदानीमेवातिक्रान्तः । इतः परं किमस्मत्प्रियवयस्ययासौ कारयिष्यतीति भावः । अत एव सखीभिः अस्मदादिभिः । अत्रान्तरवीक्षिताम् अस्राणामन्तरे निपतनोद्गमयोरन्तराले । अनवरतप्रवृत्तानामश्रुबिन्दूनाम् अतिक्षणिकयोर्निपतनोद्गमनकर्मणोर्मध्ये एकस्मिन् बिन्दौ पतिते सत्यन्यस्योद्गमनात् पूर्वमित्यर्थः । अनेनाश्रूणामविच्छिन्नता ध्वन्यते । वीक्षितां दृष्टाम् इमां सखीम् अभ्यवपत्स्यते अनुग्रहीष्यति । 'अभ्यवपत्तिरनुग्रह' इत्यमरः । इतिशब्दोऽत्र द्रष्टव्यः । न वेद्मि न जानामि । कदा अनुग्रहीष्यतीति न जानामीत्यर्थः । अनुग्रहे सन्देह एवास्माकमिति भावः । अत्रानुरूपामुपमां दर्शयतिवृषा तदवग्रहक्षतां सीतामिव इति । वृषा वासवः । तच्छब्देन वृषैव परामृश्यते । तस्यावग्रहः तदवग्रहः । तेन क्षतां शोषिताम् । इन्द्रकृतेन वर्षप्रतिबन्धेन शोषितामित्यर्थः । सीतां हलक्षतां भूमिमिव । 'सीता लाङ्गलपद्धतिरि' त्यमरः । वर्षकारित्वमिव वर्षप्रतिबन्धकत्वमपि प्रसिद्धं मघोनः । यदुक्तं शुकसन्देशे- 
+वीरः स्वे यो व्यतनुत पदे वृष्टिहीने किलाज्ञां 
+मोघां मेघोदरभिदुरया बाणवृष्ट्या मघोनः ॥ (पू.भा. २७) इति । यथा प्रार्थितोऽपि दुर्लभप्रसादो वृषा निजप्रसादमात्रलभ्यस्य वर्षस्य विनाशेन शोषितां सस्यैकशरणैर्जनैः अत्रान्तरवीक्षितां वर्षैकनिमित्तसस्याद्यभावेन कृशतया लक्ष्यमाणां लाङ्गलक्षतत्वात् प्रत्यासन्नबीजवापकालां वसुन्धरां प्रसादाभिमुखः सन् सम्यगनुगृह्णाति, तथेमां कदा परमेश्वरोऽनुग्रहीष्यतीति भावः । तथाभूतवसुन्धरोपमया देव्या अस्माकमेव दुःखाभिभवः, न तु देव्या इति ध्वन्यते । तथा हलक्षता भूमिः इन्द्रप्रसादमात्रशरणा, तथैवेयं परमेश्वरमात्रशरणा । वयं तु देवीमात्रशरणा इति चानेन 
+तु वाक्येन द्योत्यते ॥ ६१ ॥ 
+३१० 
+
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-न वेद्मि स प्रार्थितदुर्लभः कदा सखीभि रस्त्रीत्तरमीक्षितामिमाम् ।  
-तपःकृशामभ्युपपत्स्यते सखी वृषेव सीतां तदवग्रहक्षताम् ॥ 5.61 ॥  
+न वेद्मि स प्रार्थितदुर्लभः कदा सखीभिरस्रोत्तरमीक्षितामिमाम् / सखीभिरस्रान्तरवीक्षितामिमाम्।  
+तपःकृशामभ्युपपत्स्यते सखीं वृषेव सीतां तदवग्रहक्षताम् ॥ 5.61 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -2067,14 +2190,23 @@ who does not, for a long time, make his face the mark for
 
 <details><summary>मल्लिनाथः</summary>
 
-नेति । प्रार्थितः सन्दुर्लभः सदेवस्तपःकृशां तपसा कृशां क्षीणामत एव सखीभिरस्त्रोत्तरमश्रुप्रधानं यथा भवति तथेक्षितामिमां नः सखीं तस्येन्द्रस्यावग्रहेणानावृष्ट्या क्षतां पीडिताम् । 'वृष्टिर्वर्ष दद्वघातेऽवग्रहावग्रहौ समौ' इत्यमरः । अवग्रहः । वर्षप्रतिबन्ध इत्यर्थः । सीतां कृष्टभुवम् । 'सीता लाङ्गलपद्धतिः' इत्यमरः । वृषा वासव इव । 'वासवो वृत्रहा वृषा' इत्यमरः । कदाभ्युपपत्स्यते कदानुग्रहक्षतामित्यनेनैव गतार्थत्वे तत्पदस्य वैयर्थ्यापत्तेस्तदिति भिन्नं पदं वेद्मीत्यस्य कर्मेति युक्तमुत्पश्यामः ॥ 5.61 ॥
+नेति । प्रार्थितः सन्दुर्लभः सदेवस्तपःकृशां तपसा कृशां क्षीणामत एव सखीभिर् अस्त्रोत्तरम् अश्रुप्रधानं यथा भवति तथेक्षितामिमां नः सखीं तस्येन्द्रस्यावग्रहेणानावृष्ट्या क्षतां पीडिताम् । 'वृष्टिर्वर्ष दद्वघातेऽवग्रहावग्रहौ समौ' इत्यमरः । अवग्रहः । वर्षप्रतिबन्ध इत्यर्थः । सीतां कृष्टभुवम् । 'सीता लाङ्गलपद्धतिः' इत्यमरः । वृषा वासव इव । 'वासवो वृत्रहा वृषा' इत्यमरः । कदाभ्युपपत्स्यते कदानुग्रहक्षतामित्यनेनैव गतार्थत्वे तत्पदस्य वैयर्थ्यापत्तेस्तदिति भिन्नं पदं वेद्मीत्यस्य कर्मेति युक्तमुत्पश्यामः ॥ 5.61 ॥
 </details>
 
+### उररीकरणम्
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अगूढसद्भावमितीङ्गितज्ञया निवेदितो नैष्ठिकसुन्दरस्तया ।  
-अयीदमेवं परिहास इत्युमामपृच्छदव्यञ्जितहर्षलक्षणः ॥ 5.62 ॥  
+अगूढ-सद्-भावम् इतीङ्गितज्ञया  
+निवेदितो नैष्ठिक-सुन्दरस् तया ।  
+"अयीदम् एवं +++(उत)+++ परिहास?" इत्य् उमाम्  
+**अपृच्छद्** अव्यञ्जित-हर्ष-लक्षणः ॥ 5.62 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(62.) Thus informed by her, who knew the secrets of Pârvati's heart, so as to make her noble intention clear, that handsome Brahmacharin, without showing signs of delight, asked Umà whether it was so or a joke. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
