--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
@@ -2226,9 +2226,17 @@ I do not know when he, difficult to be secured though sought after, will favour 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथाग्रहस्ते मुकुलीकृताङ्गुलौ समर्पयन्ती स्फटिकाक्षमालिकाम् ।  
-कथंचिदद्रेस्तनया मिताक्षरं चिरव्यवस्थापितवागभाषत ॥ 5.63 ॥  
+अथाग्र-हस्ते मुकुली-कृताङ्गुलौ  
+समर्पयन्ती स्फटिकाक्ष-मालिकाम् ।  
+कथंचिद् अद्रेस् तनया मिताक्षरं  
+चिर-व्यवस्थापित-वाग् **अभाषत** ॥ 5.63 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(63.) Then the daughter of the mountain, putting the rosary of crystal beads on (or into) her forehand, with the fingers drawn together so as to resemble a bud, spoke, with great difficulty, in measured words, having adjusted her speech (in her mind) for a long time. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -2246,12 +2254,25 @@ I do not know when he, difficult to be secured though sought after, will favour 
 अथेति । अथानन्तरमद्रेस्तनया पार्वती मुकुलीकृताङ्गुलौ संपुटीकृताङ्गुलौ । अग्रश्चासौ हस्तश्चेति समानाधिकरणसमासः ।हस्ताग्राग्रहस्तयोगुणगुणिनोर्भेदाभेदादिति वामनः । तस्मिन्नग्रहस्ते स्फटिकानामक्षमालिकां जपमालिकामर्पयन्त्यामुञ्चती कथंचिन्महता कष्टेन चिरव्यवस्थापितवाक्चिरेण स्वीकृतवाक् । एतेन लज्जोपरोधो व्यज्यते । मिताक्षरं परिमितवर्णं यथा तथाभाषत बभाषे ॥ 5.63 ॥
 </details>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
+<details><summary>विस्तारः (द्रष्टुं नोद्यम्) - प्रस्तावः</summary>
 
 किमुवाचेत्याह-  
-यथा श्रुतं वेदविदां वर ! त्वया जनोयमुच्चैःपदलङ्घनोत्सुकः ।  
-तपः किलेदं तदवाप्तिसाधनं मनोरथानामगतिर्न विद्यते ॥ 5.64 ॥  
 </details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+यथा श्रुतं वेदविदां वर ! त्वया  
+जनोयम् उच्चैः-पद-**लङ्घनोत्सुकः** ।  
+तपः किलेदं तद्-अवाप्ति-साधनं  
+मनो-रथानाम् अ-गतिर् **न विद्यते** ॥ 5.64 ॥+++(5)+++  
+</details>
+
+<details><summary>English</summary>
+
+(64.) O thou, worshipped of those who know the Vedas, thou hast heard the truth (lit. as it is); this (humble) These person is ambitious of attaining the highest post. austerities are a means of getting that: nothing is in accessible to desire (fancy). 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -2270,6 +2291,7 @@ I do not know when he, difficult to be secured though sought after, will favour 
 यथेति । हे वेदविदांवर वैदिकश्रेष्ठ ! त्वया यथा श्रुतां सम्यक् श्रुतम् । श्रुतार्थमेवाह-अयं जनः । स्वयमित्यर्थः । उच्चैःपदस्य शिवलाभरुपोन्नतस्थानस्य लङ्घन आक्रमण उत्सुकः । किमत्रायुक्तमित्यत्राह- इदं तपस्तदवाप्तेस्तस्योच्चैः पदस्यावाप्तेः प्राप्तेः साधनं किलेत्यलीके । अतितिच्छत्वादसाधकमेवेत्यर्थः । तर्हि त्यज्यतामित्याशङ्क्य दुराशा मां न मुञ्चतीत्याशयेनाह-मनोरथानां कामानामगतिरविषयो न विद्यते । न हि स्वशक्तिपर्यालोचनया कामाः प्रवर्तन्त इति भावः ॥ 5.64 ॥
 </details>
 
+### अनौचिय-कथा
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथाह वर्णो विदितो महेश्वरस्तदर्थिनी त्वं पुनरेव वर्तसे ।  
