--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
@@ -2294,35 +2294,51 @@ I do not know when he, difficult to be secured though sought after, will favour 
 ### अनौचिय-कथा
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथाह वर्णो विदितो महेश्वरस्तदर्थिनी त्वं पुनरेव वर्तसे ।  
-अमङ्लाभ्यासरतिं विचिन्त्य तं तवानुवृतिं न च कर्तुमुत्सहे ॥ 5.65 ॥  
+अथाह वर्णी **विदितो** महेश्वरस्  
+तद्-**अर्थिनी** त्वं पुनर् एव **वर्तसे** ।  
+अमङ्लाभ्यास-रतिं **विचिन्त्य** तं  
+तवानुवृत्तिं **न** च कर्तुम् **उत्सहे** ॥ 5.65 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(65.) Then said the ascetic- Mahes'wara is well known: and yet thou hast a yearning after him; knowing him possess a love for inauspicious things, I cannot see my way to approve of thy desire. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-अथाह वर्णो विदितो महेश्वरस्तदर्थिनी त्वं पुनरेव वर्तसे ।  
-अमङ्लाभ्यासरतिं विचिन्त्य तं तवानुवृतिं न च कर्तुमुत्सहे ॥ 5.65 ॥  
+अथाह वर्णी विदितो महेश्वरस्तदर्थिनी त्वं पुनरेव वर्तसे ।  
+अमङ्लाभ्यासरतिं विचिन्त्य तं तवानुवृत्तिं न च कर्तुमुत्सहे ॥ 5.65 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-अथ वर्णो आह- 'महेश्वरो विदितः, पनः त्वं तदर्थिनी वर्तसे ? तम् अमङ्गलाऽभ्यासरतिं विचिन्त्य तव अनुवृत्तिं कर्तुं न उत्सहे' ।  
+अथ वर्णी आह- 'महेश्वरो विदितः, पनः त्वं तदर्थिनी वर्तसे ? तम् अमङ्गलाऽभ्यासरतिं विचिन्त्य तव अनुवृत्तिं कर्तुं न उत्सहे' ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-अथेति । अथ वर्णि ब्रह्मचारी । 'वर्णिनो ब्रह्मचारिणः' इत्यमरः । आह । उवाचेत्यर्थः । 'आहेति भूतार्थे लट्प्रयोगो भ्रान्तमूलः' इत्याह वामनः । किमित्याह-महेश्वरो महादेवो विदितः । मया ज्ञायत इत्यर्थः । बुद्धर्थत्वाद्वर्तमाने क्तप्रत्ययः, तद्योगात्षष्ठी च । येन त्वं प्रग्भग्नमनोरथा कृतेतिभावः । पुनरेव त्वं तीश्वरमर्थयसे तदर्थिन्येव तत्कामैव प्रवर्तसे । तत्प्रभावमनुभूयापीति भावः । अनुसरेणे को दोषस्तत्राह- अमङ्गलाभ्यासेऽमङ्गलाचारे रतिर्यस्त तं यथोक्तमीश्वरं विचिन्त्य  तवानुवृत्तिमनुसरणं कर्तु नोत्सहे । नानुमन्तुं शक्नोमीत्यर्थः ॥ 5.65 ॥
+अथेति । अथ वर्णी ब्रह्मचारी । 'वर्णिनो ब्रह्मचारिणः' इत्यमरः । आह । उवाचेत्यर्थः । 'आहेति भूतार्थे लट्प्रयोगो भ्रान्तमूलः' इत्याह वामनः । किमित्याह-महेश्वरो महादेवो विदितः । मया ज्ञायत इत्यर्थः । बुद्धर्थत्वाद्वर्तमाने क्तप्रत्ययः, तद्योगात्षष्ठी च । येन त्वं प्रग्भग्नमनोरथा कृतेतिभावः । पुनरेव त्वं तीश्वरमर्थयसे तदर्थिन्येव तत्कामैव प्रवर्तसे । तत्प्रभावमनुभूयापीति भावः । अनुसरेणे को दोषस्तत्राह- अमङ्गलाभ्यासेऽमङ्गलाचारे रतिर्यस्त तं यथोक्तमीश्वरं विचिन्त्य  तवानुवृत्तिमनुसरणं कर्तु नोत्सहे । नानुमन्तुं शक्नोमीत्यर्थः ॥ 5.65 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अवस्तुनिर्बन्धपरे कथं नु ते करोऽयमासुक्तविवाहकौतुकः ।  
-करेण शंभोर्वलयीकृताहिना सहिष्यते तत्प्रथमावलम्बनम् ॥ 5.66 ॥  
+अ-वस्तु-निर्बन्ध-परे कथं नु ते  
+करोऽयम् आमुक्त+++(=आसक्त)+++-विवाह-कौतुकः+++(=रक्षा-सूत्रः)+++ ।  
+करेण शंभोर् वलयी-कृताहिना  
+**सहिष्यते** तत्-प्रथमावलम्बनम् ॥ 5.66 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(66.) O thou who hast fixed (thy mind) on a worthless object, how can this thy hand with the nuptial string still tied round it, bear the first clasp of S'ambhu's hand decked with circling snakes? 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-अवस्तुनिर्बन्धपरे कथं नु ते करोऽयमासुक्तविवाहकौतुकः ।  
+अवस्तुनिर्बन्धपरे कथं नु ते करोऽयमामुक्तविवाहकौतुकः ।  
 करेण शंभोर्वलयीकृताहिना सहिष्यते तत्प्रथमावलम्बनम् ॥ 5.66 ॥  
 </details>
 
@@ -2333,14 +2349,22 @@ I do not know when he, difficult to be secured though sought after, will favour 
 
 <details><summary>मल्लिनाथः</summary>
 
-अवस्त्विति । अवस्तुनि तुच्छवस्तुनि निर्बन्धोऽभिविवेशः परं प्रधानं यस्यस्तस्याः संबुद्धिरवस्तुनिर्बन्धपरे पार्वति, आमुक्तमासञ्जितं विवाहे यत्कौतुकं हस्तसूत्रं तद्यस्य स तेऽयं करः । 'कौतुकं मङ्गले हर्षे हस्तसूत्रे कुतूहले' इति शास्वतः । वलयीकृताहिना भूषणीकृतसर्पेण शंभोर्महादेवस्य करेण करणभूतेन । तदेव प्रथमं तत्प्रथमम् । अपरिचितत्वादतिभयंकरमिति भावः । तच्च तदवलम्बनं ग्रहणं चेति कथं नु सहिष्यते । न कथंचिदपि सहिष्यत इत्यर्थः । अग्रतो यद्भावि तद् दूरेऽवतिष्ठतां प्रथमं करग्रह एव दुःसह इति भावः ॥ 5.66 ॥
+अवस्त्विति । अवस्तुनि तुच्छवस्तुनि निर्बन्धोऽभिविवेशः परं प्रधानं यस्यस्तस्याः संबुद्धिरवस्तुनिर्बन्धपरे पार्वति, आमुक्तम् आसञ्जितं विवाहे यत्कौतुकं हस्तसूत्रं तद्यस्य स तेऽयं करः । 'कौतुकं मङ्गले हर्षे हस्तसूत्रे कुतूहले' इति शास्वतः । वलयीकृताहिना भूषणीकृतसर्पेण शंभोर्महादेवस्य करेण करणभूतेन । तदेव प्रथमं तत्प्रथमम् । अपरिचितत्वादतिभयंकरमिति भावः । तच्च तदवलम्बनं ग्रहणं चेति कथं नु सहिष्यते । न कथंचिदपि सहिष्यत इत्यर्थः । अग्रतो यद्भावि तद् दूरेऽवतिष्ठतां प्रथमं करग्रह एव दुःसह इति भावः ॥ 5.66 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-त्वमेव तावत्परिचिन्तय स्वयं कदाचिदेते यदि योगमर्हतः ।  
-वधूदुकूलं कलहंसलक्षणं गजाजिनं शोणितबिन्दुवर्षि च ॥ 5.67 ॥  
+त्वम् एव तावत् **परिचिन्तय** स्वयं  
+कदाचिद् एते यदि योगम् **अर्हतः** ।  
+वधू-दुकूलं कल-हंस-लक्षणं  
+गजाजिनं शोणित-बिन्दु-वर्षि च ॥ 5.67 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(67.) Do thou thyself consider adequately whether these two things can ever bear being together the bridal ( 36 ) silks gleaming with the (figures of) swans and the elephanthide dripping with blood? 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -2360,14 +2384,22 @@ I do not know when he, difficult to be secured though sought after, will favour 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-चतुष्कपुष्पप्रकरावकीर्णयोः परोऽपि को नाम तवानुमान्यते ।  
-अलक्तकाङ्कानि पदानि पादयोर्विकोर्णकेशासु परेतभूमिषु ॥ 5.68 ॥  
+चतुष्क-पुष्प-प्रकर+++(=समूह)++++अवकीर्णयोः  
+परो+++(=अमित्रो)+++ऽपि **को** नाम **तवानुमान्यते** ।  
+अलक्तकाङ्कानि पदानि पादयोर्  
+विकीर्ण-केशासु परेत-भूमिषु ॥ 5.68 ॥+++(4)+++  
 </details>
+
+<details><summary>English</summary>
+
+(68.) Who, even an enemy, consent (to see) the footprints, leaving marks of red vermeil of thy feet treading upon flowers in the saloon, traced upon the ground of the dead spread over with hair? 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
 चतुष्कपुष्पप्रकरावकीर्णयोः परोऽपि को नाम तवानुमान्यते ।  
-अलक्तकाङ्कानि पदानि पादयोर्विकोर्णकेशासु परेतभूमिषु ॥ 5.68 ॥  
+अलक्तकाङ्कानि पदानि पादयोर्विकीर्णकेशासु परेतभूमिषु ॥ 5.68 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -2382,9 +2414,17 @@ I do not know when he, difficult to be secured though sought after, will favour 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अयुक्तरूपं किमतः परं वद त्रिनेत्रवक्षः सुलभं तवापि यत् ।  
-स्तनद्वयेऽस्मिन्हरिचन्दनास्पदे पदं चिताभस्मरजः करिष्यति ॥ 5.69 ॥  
+अ-युक्त-रूपं किम् अतः परं **वद** -  
+त्रि-नेत्र-वक्षः सुलभं तवापि यत् ।  
+स्तन-द्वयेऽस्मिन् हरि-चन्दनास्पदे  
+**पदं** चिताभस्म-रजः **करिष्यति** ॥ 5.69 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(69.) Say-Is there any thing more ungainly than this that the ashes of the funeral pyres easy to be obtained from the bosom of the three-eyed God will make their home on thy bosom, a (fitting) place for sandal wood paste? 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -2404,7 +2444,8 @@ I do not know when he, difficult to be secured though sought after, will favour 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इयं च तेऽन्या पुरतो विडम्बना यदूढया वारणराजहार्यया ।  
+इयं च तेऽन्या पुरतो विडम्बना  
+यद्-ऊढया वारणराजहार्यया ।  
 विलोक्य वृद्धोक्षमधिष्ठितं त्वया महाजनः स्मेरमुखो भविष्यति ॥ 5.70 ॥  
 </details>
 
